# bellmaneq

./: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/bellmaneq-core/: Cargo.toml
crates/bellmaneq-core/benches/: bellman_bench.rs
crates/bellmaneq-core/src/: lib.rs  mdp.rs  operator.rs
crates/bellmaneq-core/src/solver/: mod.rs  modified_policy_iteration.rs  policy_iteration.rs  value_iteration.rs
crates/bellmaneq-econ/: Cargo.toml
crates/bellmaneq-econ/src/: cake_eating.rs  growth.rs  income_fluctuation.rs  lib.rs  mccall.rs  util.rs
crates/bellmaneq-finance/: Cargo.toml
crates/bellmaneq-finance/benches/: option_bench.rs
crates/bellmaneq-finance/src/: american_option.rs  finite_difference.rs  lib.rs  optimal_stopping.rs
crates/bellmaneq-games/: Cargo.toml
crates/bellmaneq-games/src/: connect_four.rs  lib.rs  minimax.rs  tictactoe.rs  tictactoe_mdp.rs
crates/bellmaneq-py/: Cargo.toml
crates/bellmaneq-py/src/: lib.rs  py_econ.rs  py_finance.rs  py_games.rs  py_solver.rs
notebooks/: 01_value_iteration.ipynb  02_connect_four.ipynb  03_american_option.ipynb  04_cake_eating.ipynb  05_mccall.ipynb  06_growth.ipynb  07_income_fluctuation.ipynb
python/bellmaneq/: __init__.py  _core.pyi
python/bellmaneq/viz/: __init__.py  convergence.py  econ.py  finance.py  games.py
tests/: test_econ.py  test_finance.py  test_games.py  test_solver.py  test_viz.py
