[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "bellmaneq"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["numpy>=1.26", "matplotlib>=3.8"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "maturin>=1.7", "jupyter>=1.0"]

[tool.maturin]
module-name = "bellmaneq._core"
python-source = "python"
features = ["pyo3/extension-module"]
manifest-path = "crates/bellmaneq-py/Cargo.toml"
