[package]
name = "bellmaneq-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "bellman_bench"
harness = false
